--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libkdegames (4:4.10.2-1) UNRELEASED; urgency=low
+libkdegames (4:4.10.2-1) experimental; urgency=low
 
   * First release of kdegames after being split by upstream.
   * Team upload.
