--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkdegames (4:4.10.2-2) UNRELEASED; urgency=low
+
+  * [debian/control] Update scm fields.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 07 Apr 2013 11:56:44 +0200
+
 libkdegames (4:4.10.2-1) experimental; urgency=low
 
   * First release of kdegames after being split by upstream.
