--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 libkdegames (4:4.10.2-2) UNRELEASED; urgency=low
 
+  * Team upload.
+
+  [ Maximiliano Curia ]
   * [debian/control] Update scm fields.
+  * [debian/copyright] Fix erroneous license name in pointers to full license.
+  * [debian/control::kdegames-card-data] Add Section: games.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 07 Apr 2013 11:56:44 +0200
 
