--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libkdegames (4:4.10.2-2) UNRELEASED; urgency=low
+libkdegames (4:4.10.3-1) UNRELEASED; urgency=low
 
   * Team upload.
 
@@ -6,8 +6,9 @@ libkdegames (4:4.10.2-2) UNRELEASED; urgency=low
   * [debian/control] Update scm fields.
   * [debian/copyright] Fix erroneous license name in pointers to full license.
   * [debian/control::kdegames-card-data] Add Section: games.
+  * New upstream release.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 07 Apr 2013 11:56:44 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 14 May 2013 15:46:36 +0200
 
 libkdegames (4:4.10.2-1) experimental; urgency=low
 
