--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ libkdegames (4:4.10.4-1) UNRELEASED; urgency=low
   * [debian/copyright] Fix erroneous license name in pointers to full license.
   * [debian/control::kdegames-card-data] Add Section: games.
   * [debian/rules] Enable tests.
+  * Remove version to kdegames Suggest of libkdegames-dbg.
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 08 Jun 2013 18:35:10 +0200
 
