--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libkdegames (4:4.10.4-1) UNRELEASED; urgency=low
+libkdegames (4:4.10.4-1) experimental; urgency=low
 
   * New upstream release.
   * [debian/control] Update scm fields.
@@ -8,7 +8,7 @@ libkdegames (4:4.10.4-1) UNRELEASED; urgency=low
   * Remove version to kdegames Suggest of libkdegames-dbg.
   * Update vcs fields.
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 08 Jun 2013 18:35:10 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 08:18:31 +0200
 
 libkdegames (4:4.10.2-1) experimental; urgency=low
 
