--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-libkdegames (4:4.10.4-2) UNRELEASED; urgency=low
+libkdegames (4:4.10.5-1) UNRELEASED; urgency=low
 
+  * New upstream release.
   * Fix symbols for armhf (qreal subst).
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 10:17:08 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 11 Jul 2013 10:03:55 +0200
 
 libkdegames (4:4.10.4-1) experimental; urgency=low
 
