--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libkdegames (4:4.10.5-1) UNRELEASED; urgency=low
+libkdegames (4:4.10.5-1) unstable; urgency=low
 
   * New upstream release.
   * Fix symbols for armhf (qreal subst).
   * Update symbols.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 11 Jul 2013 10:03:55 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 11 Jul 2013 21:07:17 +0200
 
 libkdegames (4:4.10.4-1) experimental; urgency=low
 
