--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ libkdegames (4:4.11.1-0r0) UNRELEASED; urgency=low
   * New upstream release.
   * Update install files.
   * Enable DebianABIManager.
+  * Split binary packages kde-games-core-declarative and
+    libkdegamesprivate1abi1.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:24:24 +0200
 
