--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ libkdegames (4:4.11.1-0r0) UNRELEASED; urgency=low
   * Enable DebianABIManager.
   * Split binary packages kde-games-core-declarative and
     libkdegamesprivate1abi1.
+  * Create new symbols files.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:24:24 +0200
 
