--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkdegames (4:4.11.2-2) UNRELEASED; urgency=low
+
+  * Update symbols files.
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 04 Oct 2013 11:09:48 +0200
+
 libkdegames (4:4.11.2-1) experimental; urgency=low
 
   * New upstream release.
