--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-libkdegames (4:4.11.3-1) UNRELEASED; urgency=low
+libkdegames (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
   * Update build dependencies.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 07 Nov 2013 10:18:16 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 07 Nov 2013 14:28:08 +0100
 
 libkdegames (4:4.11.2-2) experimental; urgency=low
 
