--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libkdegames (4:4.11.4-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Bump Standards-Version to 3.9.5, no changes needed.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 06 Dec 2013 16:19:36 +0100
 
