--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libkdegames (4:4.11.4-1) UNRELEASED; urgency=low
+libkdegames (4:4.11.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Bump Standards-Version to 3.9.5, no changes needed.
   * Add autopkgtest.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 06 Dec 2013 16:19:36 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 14 Jan 2014 01:45:56 -0300
 
 libkdegames (4:4.11.3-1) unstable; urgency=low
 
