--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ libkdegames (4:4.11.5-1) UNRELEASED; urgency=low
   * New upstream release.
   * Bump Standards-Version to 3.9.5, no changes needed.
   * Add autopkgtest.
+  * Add abi-compliance-checker info.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 14 Jan 2014 01:45:56 -0300
 
