--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-libkdegames (4:4.12.2-1) UNRELEASED; urgency=medium
+libkdegames (4:4.12.4-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:24:56 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 31 Mar 2014 22:42:39 +0200
 
 libkdegames (4:4.11.5-1) unstable; urgency=low
 
