--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkdegames (4:4.13.1-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 16 May 2014 10:45:02 +0200
+
 libkdegames (4:4.12.4-1) unstable; urgency=medium
 
   * New upstream release.
