--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libkdegames (4:4.13.1-1~) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Update symbols with 4.12.4 buildlogs.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 16 May 2014 11:03:39 +0200
 
