--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libkdegames (4:4.13.1-1~) UNRELEASED; urgency=medium
+libkdegames (4:4.13.1-1) unstable; urgency=medium
 
   * New upstream release.
   * Update symbols with 4.12.4 buildlogs.
   * Update symbols files.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 16 May 2014 11:03:39 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 16 May 2014 14:49:40 +0200
 
 libkdegames (4:4.12.4-1) unstable; urgency=medium
 
