--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+libkdegames (4:4.13.1-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 04 Oct 2014 12:17:18 -0300
+
 libkdegames (4:4.13.1-1) unstable; urgency=medium
 
   * New upstream release.
