--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 libkdegames (4:4.13.1-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Remove myself from Uploaders.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 04 Oct 2014 12:17:18 -0300
 
 libkdegames (4:4.13.1-1) unstable; urgency=medium
