--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
-libkdegames (4:4.13.1-2) UNRELEASED; urgency=medium
+libkdegames (4:4.14.2-1~) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Remove myself from Uploaders.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 04 Oct 2014 12:17:18 -0300
+  [ Maximiliano Curia ]
+  * New upstream release (4.14.2).
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Oct 2014 13:56:36 +0200
 
 libkdegames (4:4.13.1-1) unstable; urgency=medium
 
