--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ libkdegames (4:4.14.2-1~) UNRELEASED; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (4.14.2).
+  * Update symbols files from buildds logs (4:4.13.1-1).
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Oct 2014 13:56:36 +0200
 
