--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libkdegames (4:4.14.2-1~) UNRELEASED; urgency=medium
+libkdegames (4:4.14.2-1) unstable; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Remove myself from Uploaders.
@@ -7,7 +7,7 @@ libkdegames (4:4.14.2-1~) UNRELEASED; urgency=medium
   * New upstream release (4.14.2).
   * Update symbols files from buildds logs (4:4.13.1-1).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Oct 2014 13:56:36 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 20 Oct 2014 17:13:28 +0200
 
 libkdegames (4:4.13.1-1) unstable; urgency=medium
 
