--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libkdegames (4:14.11.97-0ubuntu1~ubuntu15.04~ppa1) vivid; urgency=medium
+
+  * New upstream RC release
+  * Merge with Debian, remaining changes:
+   - not-installed
+  * kdegames-card-data replaces/breaks old split out packages
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 01 Dec 2014 18:03:49 +0100
+
 libkdegames (4:4.14.2-1) unstable; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
@@ -9,6 +18,58 @@ libkdegames (4:4.14.2-1) unstable; urgency=medium
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 20 Oct 2014 17:13:28 +0200
 
+libkdegames (4:4.14.2-0ubuntu1) vivid; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Oct 2014 06:23:46 -0700
+
+libkdegames (4:4.14.1-0ubuntu1) utopic; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Mon, 22 Sep 2014 17:45:36 +0200
+
+libkdegames (4:4.14.0-0ubuntu1) utopic; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 20 Aug 2014 13:31:41 +0200
+
+libkdegames (4:4.13.97-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release RC
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Fri, 01 Aug 2014 17:20:58 +0200
+
+libkdegames (4:4.13.95-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Wed, 30 Jul 2014 18:45:36 +0200
+
+libkdegames (4:4.13.90-0ubuntu1) utopic; urgency=medium
+
+  * New upstream beta release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Thu, 24 Jul 2014 23:35:46 +0200
+
+libkdegames (4:4.13.2-0ubuntu1) utopic; urgency=medium
+
+  * new upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 18 Jun 2014 12:06:37 +0100
+
+libkdegames (4:4.13.1-1ubuntu1) utopic; urgency=medium
+
+  * Merge from debian, remaining changes
+   - add package kdegames-card-data-extra and update kdegames-card-data.install
+     for it
+   - Appropriate Breaks/Replaces for libkdegamesprivate1abi1 and
+     kde-games-core-declarative
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 22 May 2014 16:46:53 +0200
+
 libkdegames (4:4.13.1-1) unstable; urgency=medium
 
   * New upstream release.
@@ -17,12 +78,78 @@ libkdegames (4:4.13.1-1) unstable; urgency=medium
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 16 May 2014 14:49:40 +0200
 
+libkdegames (4:4.13.0-0ubuntu1) trusty; urgency=medium
+
+  * New upstream KDE Software Compilation release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 10 Apr 2014 22:21:25 +0100
+
+libkdegames (4:4.12.97-0ubuntu1) trusty; urgency=medium
+
+  * New upstream release candidate
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Wed, 02 Apr 2014 11:48:43 +0200
+
+libkdegames (4:4.12.95-0ubuntu1) trusty; urgency=medium
+
+  * New upstream beta release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Sun, 23 Mar 2014 12:48:13 +0100
+
+libkdegames (4:4.12.90-0ubuntu1) trusty; urgency=medium
+
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 19 Mar 2014 11:54:01 +0000
+
 libkdegames (4:4.12.4-1) unstable; urgency=medium
 
   * New upstream release.
   * New upstream release.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 28 Apr 2014 12:24:55 +0200
+
+libkdegames (4:4.12.3-0ubuntu1) trusty; urgency=medium
+
+  * New upstream bugfix release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 04 Mar 2014 21:09:28 +0100
+
+libkdegames (4:4.12.2-0ubuntu1) trusty; urgency=medium
+
+  * New upstream bugfix release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Wed, 05 Feb 2014 00:20:32 +0000
+
+libkdegames (4:4.12.1-0ubuntu1) trusty; urgency=low
+
+  * New upstream bugfix release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 16 Jan 2014 08:34:40 +0000
+
+libkdegames (4:4.12.0-0ubuntu1) trusty; urgency=low
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 18 Dec 2013 17:34:45 +0000
+
+libkdegames (4:4.11.97-0ubuntu1) trusty; urgency=low
+
+  * New upstream RC release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 29 Nov 2013 13:33:07 +0000
+
+libkdegames (4:4.11.95-0ubuntu1) trusty; urgency=low
+
+  * New upstream beta release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Mon, 25 Nov 2013 18:30:20 +0100
+
+libkdegames (4:4.11.80-0ubuntu1) trusty; urgency=low
+
+  * New upstream beta release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Sat, 23 Nov 2013 17:53:54 +0100
 
 libkdegames (4:4.11.5-1) unstable; urgency=low
 
@@ -57,6 +184,66 @@ libkdegames (4:4.11.2-1) experimental; urgency=low
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:24:24 +0200
 
+libkdegames (4:4.11.2-0ubuntu1) saucy; urgency=low
+
+  * New upstream bugfix release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 30 Sep 2013 14:47:05 +0100
+
+libkdegames (4:4.11.1-0ubuntu1) saucy; urgency=low
+
+  * New upstream bugfix release.
+
+ -- Howard Chan <smartboyhw@gmail.com>  Fri, 06 Sep 2013 22:35:31 +0100
+
+libkdegames (4:4.11.0-0ubuntu1) saucy; urgency=low
+
+  [ Howard Chan ]
+  * New upstream release
+
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 13 Aug 2013 23:51:28 +0100
+
+libkdegames (4:4.10.97-0ubuntu1) saucy; urgency=low
+
+  * New upstream RC 2 release
+  * New upstream RC 2 release
+  * New upstream RC 2 release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 26 Jul 2013 19:57:26 +0100
+
+libkdegames (4:4.10.95-0ubuntu1) saucy; urgency=low
+
+  * New upstream RC release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Fri, 19 Jul 2013 12:33:20 +0000
+
+libkdegames (4:4.10.90-0ubuntu1) saucy; urgency=low
+
+  [ Michał Zając ]
+  * New upstream bet release
+
+  [ Philip Muškovac ]
+  * Strip debian revision from symbols in libkdegames6.symbols
+
+ -- Michał Zając <quintasan@kubuntu.org>  Fri, 28 Jun 2013 18:26:48 +0100
+
+libkdegames (4:4.10.80-0ubuntu1) saucy; urgency=low
+
+  [ Rohan Garg ]
+  * New upstream release
+
+  [ Philip Muškovac ]
+  * Add Qml imports to libkdegames6.install 
+  * Add new symbols to libkdegames6.symbols
+
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 21 Jun 2013 01:42:38 +0100
+
 libkdegames (4:4.10.5-1) unstable; urgency=low
 
   * New upstream release.
@@ -77,9 +264,117 @@ libkdegames (4:4.10.4-1) experimental; urgency=low
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 14 Jun 2013 08:18:31 +0200
 
+libkdegames (4:4.10.4-0ubuntu1) saucy-proposed; urgency=low
+
+  [ Rohan Garg ]
+  * New upstream bugfix release
+
+  [ Jonathan Riddell ]
+  * remove Suggests: kdegames, keep lintian happy
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Fri, 07 Jun 2013 00:46:29 +0100
+
+libkdegames (4:4.10.3-0ubuntu2) saucy; urgency=low
+
+  * Add package kdegames-data and make libkdegames6 depend on it
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 22 May 2013 14:32:48 +0000
+
+libkdegames (4:4.10.3-0ubuntu1) saucy; urgency=low
+
+  * New upstream release
+  * Merge with Debian, remaining change:
+   - add package kdegames-card-data-extra and update kdegames-card-data.install for it
+  * libkdegames6 replaces/conflicts old libkdegamesprivate1
+  * libkdegames6-dbg replaces/conflicts libkdegames-dbg
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 08 May 2013 16:10:50 +0000
+
 libkdegames (4:4.10.2-1) experimental; urgency=low
 
   * First release of kdegames after being split by upstream.
   * Team upload.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 06 Apr 2013 17:58:57 +0200
+
+libkdegames (4:4.10.2-0ubuntu1) raring; urgency=low
+
+  * New upstream bugfix release
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Sun, 31 Mar 2013 14:31:58 +0200
+
+libkdegames (4:4.10.1-0ubuntu1) raring-proposed; urgency=low
+
+  * New upstream bugfix release
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Tue, 05 Mar 2013 16:42:59 +0000
+
+libkdegames (4:4.10.0-0ubuntu1) raring-proposed; urgency=low
+
+  * New upstream release
+
+ -- Rohan Garg <rohangarg@kubuntu.org>  Wed, 06 Feb 2013 12:07:54 +0000
+
+libkdegames (4:4.9.98-0ubuntu1) raring-proposed; urgency=low
+
+  * New upstream release candidate
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 18 Jan 2013 15:59:14 +0000
+
+libkdegames (4:4.9.97-0ubuntu1) raring; urgency=low
+
+  * New upstream release candidate
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Thu, 03 Jan 2013 22:20:23 +0100
+
+libkdegames (4:4.9.95-0ubuntu1) raring; urgency=low
+
+  [ Philip Muškovac ]
+  * New upstream release 
+  * drop kubuntu_01_cmake_licence.diff, fixed upstream
+
+  [ Scott Kitterman ]
+  * Add Kubuntu Vcs-* to debian/control
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Fri, 21 Dec 2012 13:57:02 +0100
+
+libkdegames (4:4.9.90-0ubuntu6) raring; urgency=low
+
+  * Add GFDL 1.2 references to debian/copyright
+  * Remove redundant binary section fields in debian/control
+
+ -- Scott Kitterman <scott@kitterman.com>  Tue, 11 Dec 2012 21:44:53 -0500
+
+libkdegames (4:4.9.90-0ubuntu5) raring; urgency=low
+
+  * Update libkdegame6.symbols for powerpc and armhf
+
+ -- Scott Kitterman <scott@kitterman.com>  Mon, 10 Dec 2012 16:15:17 -0500
+
+libkdegames (4:4.9.90-0ubuntu4) raring; urgency=low
+
+  * More fixing previous breakage
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 10 Dec 2012 16:52:21 +0000
+
+libkdegames (4:4.9.90-0ubuntu3) raring; urgency=low
+
+  * More fixing previous breakage
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 10 Dec 2012 16:38:28 +0000
+
+libkdegames (4:4.9.90-0ubuntu2) raring; urgency=low
+
+  * Fix libs section to libs
+  * Fix build-dep on libsndfile1-dev
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 10 Dec 2012 15:53:48 +0000
+
+libkdegames (4:4.9.90-0ubuntu1) raring-proposed; urgency=low
+
+  * Initial release
+  * Build-dep on libsndfile1-dev, libopenal-dev
+  * Add kubuntu_01_cmake_licence.diff from upstream to add missing licence
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 24 Nov 2012 05:40:53 +0000
+
