--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 libkdegames (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * New upstream release
   * Remove kdelibs5-dev depend version as there was not a new release.
+
+  [ Philip Muškovac ]
+  * kdegames-card-data breaks/replaces
+    kdegames-card-data-extra (<< 4:14.11.97-0ubuntu1~)
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 12 Dec 2014 11:36:55 -0800
 
