--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libkdegames (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
+libkdegames (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release
