--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-libkdegames (4:14.12.2-0ubuntu1) UNRELEASED; urgency=medium
+libkdegames (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
   * Remove unstable from watch file, uscan fails with 
     remote site does not even have current version
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 06 Feb 2015 12:17:52 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 10 Feb 2015 09:38:39 -0800
 
 libkdegames (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
