--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libkdegames4 (4:14.12.2-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Rename source to libkdegames4 to not conflict with the libkdegames that
+    will be part of KDE Applications 15.04
+
+ -- Harald Sitter <sitter@kde.org>  Tue, 03 Mar 2015 12:19:15 +0100
+
 libkdegames (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
