--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkdegames4 (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 11 Mar 2015 06:25:54 -0700
+
 libkdegames4 (4:14.12.2-0ubuntu2) UNRELEASED; urgency=medium
 
   * Rename source to libkdegames4 to not conflict with the libkdegames that
