--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-libkdegames4 (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+libkdegames4 (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
+  * Release to archive
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 11 Mar 2015 06:25:54 -0700
 
