--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkdegames4 (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 May 2015 12:17:35 -0700
+
 libkdegames4 (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
