--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ libkdegames4 (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
   * New upstream release. 
   * Fix fuzz in enable_debianabimanager.diff 
   * Try again to fix fuzz.. 
+  * Recreate enable_debianabimanager.diff. CMakeLists.txt
+    completely changed. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 May 2015 12:17:35 -0700
 
