--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ libkdegames4 (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
   * Try again to fix fuzz.. 
   * Recreate enable_debianabimanager.diff. CMakeLists.txt
     completely changed. 
+  * Craziness patch ended up empty..  
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 14 May 2015 12:17:35 -0700
 
